# deep-translator

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
examples/: google.rs  libre.rs  linguee.rs  mymemory.rs  pons.rs
src/: detection.rs  lib.rs  main.rs
src/translator/: engine.rs  mod.rs  qcri.rs  wasm.rs
src/translator/engine/: libre.rs  mod.rs
src/translator/wasm/: deepl.rs  google.rs  libre.rs  linguee.rs  microsoft.rs  mod.rs  mymemory.rs  papago.rs  pons.rs  qcri.rs  yandex.rs
