[package]
name = "deep-translator"
version = "0.8.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ismaelxyz/deep-translator"
description = "translate between different languages using multiple translators"
categories = ["translator", "util", "tools"]
keywords = ["translator", "deep-translator", "immediate", "languages", "automation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deeptranslator"
crate-type = ["cdylib", "rlib"]


[dependencies]
serde_json = "1"
clap       = "4"
scraper    = "0.22"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"] 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio   = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-utils = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Document", "Window", "HtmlElement", "DomRect", "Element", "Node", "NodeList",
    "CssStyleDeclaration", "Response", "XmlHttpRequest", "HtmlLinkElement",
    "HtmlDocument", "HtmlInputElement", "Location", "FormData", "HtmlFormElement",
    "RequestInit", "Request", "Response", "HtmlScriptElement"
]
